[package]
name = "rbinance"
version = "0.1.0"
edition = "2024"
description = "Rust Binance API library"
license = "MIT"

[dependencies]
reqwest = { version = "0.12", features = ["json", "blocking", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
serde_json = "1.0"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
urlencoding = "2.1"