[package]
name = "rust_websocket"
version = "0.1.0"
edition = "2024"

[dependencies]
websocket = "0.27.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
futures = "0.3.31"